fixed spacing for contact page in tablet versions

--- a/contact/_contact.scss
+++ b/contact/_contact.scss
@@ -40,7 +40,7 @@
     & h2 {
       position: absolute;
       top: -2%;
-      left: -5%;
+      left: -2%;
       @include fluid(22, 35, 300);
       transform: rotate(-10deg);
       letter-spacing: 5px;
@@ -268,6 +268,7 @@
 @media (max-width: 480px) {
   .contact__wrapper::before {
     width: 100%;
+    border-radius: 0 0 100% 0;
   }
 
   .contact .form {
@@ -293,5 +294,17 @@
 @media (max-width: 370px) {
   .contact .form fieldset textarea {
     height: 45vh;
+  }
+}
+
+@media (max-height: 1400px) {
+  .contact .form fieldset textarea {
+    height: 55vh;
+  }
+}
+
+@media (max-height: 1000px) {
+  .contact .form fieldset textarea {
+    height: 40vh;
   }
 }
