--- a/css/main.css
+++ b/css/main.css
@@ -964,7 +964,7 @@ main .wrapper {
 .contact .form h2 {
   position: absolute;
   top: -2%;
-  left: -5%;
+  left: -2%;
   font-size: calc( 22px + (35 - 22) * ((100vw - 300px) / (1600 - 300)) );
   transform: rotate(-10deg);
   letter-spacing: 5px;
@@ -1160,6 +1160,7 @@ main .wrapper {
 @media (max-width: 480px) {
   .contact__wrapper::before {
     width: 100%;
+    border-radius: 0 0 100% 0;
   }
 
   .contact .form {
@@ -1181,5 +1182,15 @@ main .wrapper {
 @media (max-width: 370px) {
   .contact .form fieldset textarea {
     height: 45vh;
+  }
+}
+@media (max-height: 1400px) {
+  .contact .form fieldset textarea {
+    height: 55vh;
+  }
+}
+@media (max-height: 1000px) {
+  .contact .form fieldset textarea {
+    height: 40vh;
   }
 }
